# ConjugateGradientSolver

./: CMakeLists.txt  README.md  run.sh
src/: main.cpp
src/plotter/: coords.csv  livegraph.py  run_plotter.sh
src/solver/: ConjugateGradientSolver.cpp  ConjugateGradientSolver.hpp
src/testcases/: test.txt  testF.txt
src/utility/: MatrixIO.cpp  MatrixIO.hpp
